test/error/LexLiteralCharInvalidEscape.ci
public static class Test
{
	public static bool Run()
	{
		int a = '\d'; //ERROR: Unknown escape sequence
		return true;
	}
}
